# homework_2.11

Class_Greeter/: Class_Greeter.vcxproj  Greeter.cpp
Class_Leaver_dll/: Class_Leaver_dll.vcxproj  Class_Leaver_dll.vcxproj.filters  leave.cpp  leave.h
homework_2.11.1-2/: homework_2.11.2.sln  homework_2.11.2.vcxproj  homework_2.11.2.vcxproj.filters
homework_2.11.3/: CMakeLists.txt  Greeter.h  leave.cpp  main.cpp
homework_2.11.4/: homework_2.11.4.sln  homework_2.11.4.vcxproj  homework_2.11.4.vcxproj.filters
homework_2.11.4/Class_Figures/: Class_Figures.vcxproj  Class_Figures.vcxproj.filters  class_Equilateral_triangle.cpp  class_Figure.cpp  class_Isosceles_triangle.cpp  class_Isosceles_triangle.h  class_Quadrangle.cpp  class_Rectangle.h  class_Rectangular_triangle.cpp  class_Rectangular_triangle.h  class_Rhomb.cpp  class_Rhomb.h  class_Triangle.h  import_export_.h
homework_2.11.5/: CMakeLists.txt  class_Equilateral_triangle.h  class_Figure.h  class_Isosceles_triangle.h  class_Parallelogram.cpp  class_Parallelogram.h  class_Quadrangle.h  class_Rectangle.cpp  class_Square.cpp  class_Square.h  class_Triangle.cpp  homework_2.6.3.cpp  import_export_.h
