cmake_minimum_required (VERSION 3.22)
set (CMAKE_CXX_STANDARD 20)
set (CMAKE_CXX_STANDARD_REQUIRED True)
project (homework_2_11_3)
set (SOURCE_EXE main.cpp)
set (SOURCE_LIB Greeter.h Greeter.cpp)
set (SOURCE_DLL leave.h leave.cpp)
add_executable (homework_2_11_3 ${SOURCE_EXE})
add_library (homework_lib STATIC ${SOURCE_LIB})
add_library (homework_dll SHARED ${SOURCE_DLL})
target_link_libraries (homework_2_11_3 homework_lib homework_dll)
