cmake_minimum_required (VERSION 3.22)
set (CMAKE_CXX_STANDARD 20)
set (CMAKE_CXX_STANDARD_REQUIRED True)
project (homework_2_11_5)
set (SOURCE_EXE homework_2.6.3.cpp)
set (SOURCE_DLL class_Figure.h class_Figure.cpp class_Triangle.h class_Triangle.cpp class_Square.h class_Square.cpp class_Rhomb.h class_Rhomb.cpp class_Rectangular_triangle.h class_Rectangular_triangle.cpp class_Rectangle.h class_Rectangle.cpp class_Quadrangle.h class_Quadrangle.cpp class_Parallelogram.h class_Parallelogram.cpp class_Isosceles_triangle.h class_Isosceles_triangle.cpp class_Equilateral_triangle.h class_Equilateral_triangle.cpp import_export_.h)
add_executable (homework_2_11_5 ${SOURCE_EXE})
add_library (homework_dll SHARED ${SOURCE_DLL})
target_link_libraries (homework_2_11_5 homework_dll)